Used percentage based approach to fix overflow with flex-wrap and to change the sizes of the squares correctly so that the squares fit perfectly into the container without any issues even while zooming in the browser

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-#square {
-    height:58px;
-    width:58px;
+.square {
+    box-sizing: border-box;
+    width: 60px;
+    height:60px;
     background-color: white;
     border: 1px solid black;
     margin:0;
